--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,7 +3,7 @@ NAME		= libft.a
 CC			= cc
 CFLAGS		= -Wall -Wextra -Werror
 OBJ_DIR 	= obj/
-PRINTF_DIR	= printf/
+#PRINTF_DIR	= printf/
 GNL_DIR 	= gnl/
 
 SRCS = ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_isprint.c ft_isspace.c ft_strlen.c ft_memset.c ft_bzero.c \
@@ -14,7 +14,7 @@ ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c \
 ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c ft_lstadd_back.c ft_lstdelone.c \
 ft_lstclear.c ft_lstiter.c ft_lstmap.c
 
-SRCS_PRINTF	= ft_flags_bonus.c ft_helpersA_bonus.c ft_helpersB_bonus.c ft_printf_bonus.c \
+#SRCS_PRINTF	= ft_flags_bonus.c ft_helpersA_bonus.c ft_helpersB_bonus.c ft_printf_bonus.c \
 ft_printf_char_bonus.c ft_printf_decimal_bonus.c ft_printf_hexadecimal_bonus.c \
 ft_printf_percentage_bonus.c ft_printf_string_bonus.c ft_printf_unsigned_decimal_bonus.c \
 ft_printf_void_pointer_bonus.c ft_putnbr_base_bonus.c pf_putchar_bonus.c \
@@ -23,7 +23,7 @@ pf_puthexnbr_bonus.c
 SRCS_GNL	= get_next_line.c get_next_line_utils.c
 
 OBJS 		= $(addprefix $(OBJ_DIR), $(notdir $(SRCS:.c=.o)))
-OBJS_PRINTF = $(addprefix $(OBJ_DIR), $(notdir $(SRCS_PRINTF:.c=.o)))
+#OBJS_PRINTF = $(addprefix $(OBJ_DIR), $(notdir $(SRCS_PRINTF:.c=.o)))
 OBJS_GNL	= $(addprefix $(OBJ_DIR), $(notdir $(SRCS_GNL:.c=.o)))
 
 .SILENT:
@@ -37,9 +37,9 @@ $(OBJ_DIR)%.o: %.c
 	mkdir -p $(OBJ_DIR)
 	$(CC) $(CFLAGS) -c $< -o $@
 
-$(OBJ_DIR)%.o: $(PRINTF_DIR)%.c
-	mkdir -p $(OBJ_DIR)
-	$(CC) $(CFLAGS) -c $< -o $@
+#$(OBJ_DIR)%.o: $(PRINTF_DIR)%.c
+#	mkdir -p $(OBJ_DIR)
+#	$(CC) $(CFLAGS) -c $< -o $@
 
 $(OBJ_DIR)%.o: $(GNL_DIR)%.c
 	mkdir -p $(OBJ_DIR)
